--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^12.8.3",
     "emoji-picker-react": "^3.4.4",
     "react": "^17.0.2",
+    "react-colorful": "^5.2.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.5.2",
     "react-router": "^5.2.0",
