--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
     "emoji-picker-react": "^3.4.4",
+    "idb-keyval": "^5.0.6",
     "nanoid": "^3.1.23",
     "react": "^17.0.2",
     "react-colorful": "^5.2.2",
