--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "dayjs": "^1.10.5",
     "emoji-picker-react": "^3.4.4",
     "idb-keyval": "^5.0.6",
     "nanoid": "^3.1.23",
