--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-colorful": "^5.2.2",
     "react-dom": "^17.0.2",
     "react-hook-form": "^7.5.2",
+    "react-hot-toast": "^2.0.0",
     "react-popper": "^2.2.5",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
