--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^12.8.3",
     "dayjs": "^1.10.5",
     "emoji-picker-react": "^3.4.4",
+    "framer-motion": "^4.1.17",
     "idb-keyval": "^5.0.6",
     "nanoid": "^3.1.23",
     "react": "^17.0.2",
