--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "autoprefixer": "^9.8.8",
     "cssnano": "^5.1.14",
     "postcss": "^8.4.27",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.3.3",
     "typescript": "^4.9.5"
   }
